--- a/DotNetNote/Views/Shared/_LoginPartial.cshtml
+++ b/DotNetNote/Views/Shared/_LoginPartial.cshtml
@@ -1,13 +1,12 @@
-﻿@using DotNetNote.Models
-@inject Microsoft.Extensions.Options.IOptions<
-                DotNetNote.Settings.DotNetNoteSettings> option
+﻿@inject Microsoft.Extensions.Options.IOptions<
+    DotNetNote.Settings.DotNetNoteSettings> option
 
 @if (User.Identity.IsAuthenticated)
 {
     <form asp-controller="User" asp-action="Logout" method="post"
           id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
-            @*@if (User.IsInRole("Users")
+            @if (User.IsInRole("Users") 
                && User.FindFirst("UserId").Value == option.Value.SiteAdmin)
             {
                 <li>
@@ -15,7 +14,7 @@
                         <i class="fa fa-gear"></i> 대시보드
                     </a>
                 </li>
-            }*@
+            }
             <li>
                 <a asp-controller="User" asp-action="UserInfor" title="Manage">
                     @User.FindFirst("UserId").Value
